--- a/checkout.html
+++ b/checkout.html
@@ -68,8 +68,8 @@
 
  <section class="hero">
   <div class="wrap">
-    <h1 id="thanks-title">Got your message — it’s now clamped under a piece of tooling leather so it doesn’t wander off.</h1>
-    <p>I’ll take a sip of coffee, brush off the leather shavings, and give your idea a look.</p>
+    <h1 id="thanks-title">Submit your order — I will clamp it under a piece of tooling leather so it doesn’t wander off.</h1>
+    <p>Let's take a sip of coffee, brush off the leather shavings, and give your idea a look.</p>
     <p>If you don’t hear from me soon, assume I’m elbow-deep in dye — not ignoring you.</p>
     <div class="btns" style="margin-top:10px">
       <a class="pill" href="shop.html">Back to Shop</a>
